# v2c-project

./: .env.example  .gitignore  PROGRESS.md  README.md  demo_runbook.md  index.html  package.json  pyproject.toml  request_reports.mjs  server.js  server.mjs
deploy/systemd/: v2c-backend-jetson.service  v2c-backend.service  v2c-report.service  v2c-report.timer  v2c-server.service
docs/: demo-runbook.md  jetson-deploy.md  raspberry-pi-deploy.md
embodiedbench/: __init__.py  cli.py
embodiedbench/policy/: __init__.py  base.py  dummy_adapter.py
embodiedbench/runtime/: __init__.py  profiler.py
embodiedbench/scenario/: __init__.py  parser.py  runner.py
gpio_demo/: README.md  gpio_button.py
keys/: README.md
scenarios/: corridor_follow.yaml
scripts/: check.sh  check_service.sh  gpio_demo.py  gpio_trigger.py  install.sh  setup_jetson.sh  setup_pi.sh
systemd/: v2c-project.service
tests/: test_runner_smoke.py
